# my-customer-mcp

./: README.md  pyproject.toml
demo/: client-context.py  client.py  fastapi_mcp_server.py  langchain_mcp_client.py  mcp_llm_demo_single.py  mcp_server_gradio.py  mock_user_token.py  server.py  server_auth.py
demo/poem/: 黄金叹.md
demo/prompts/: prompts_templates.py
demo/tools/: calculator.py  hello_user.py  resource.py  sampling.py  streamable_llm.py  time_tool.py  weather.py
